--- a/calamity.cabal
+++ b/calamity.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.18
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 53204aca179b772781aa653be7f6d2b8317ce4433d39dd9fe476dac028979bbc
+-- hash: d52c65805c329ab185c6c81bf5373347ad1946bdeef8964dd4999f411797d6a2
 
 name:           calamity
 version:        0.1.17.0
@@ -162,6 +162,7 @@ library
     , lens >=4.18 && <5
     , lens-aeson >=1.1 && <2
     , megaparsec >=8 && <9
+    , mime-types >=0.1 && <0.2
     , mtl >=2.2 && <3
     , polysemy >=1.3 && <2
     , polysemy-plugin >=0.2 && <0.3
