--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:               calamity
-version:            0.1.19.2
+version:            0.1.20.0
 github:             "nitros12/calamity"
 homepage:           https://github.com/nitros12/calamity
 bug-reports:        https://github.com/nitros12/calamity/issues
@@ -58,8 +58,9 @@ dependencies:
 - reflection >= 2.1 && < 3
 - polysemy >= 1.3 && < 2
 - polysemy-plugin >= 0.2 && < 0.3
-- di-polysemy >= 0.1.4 && < 0.2
+- di-polysemy >= 0.2 && < 0.3
 - df1 >= 0.3 && < 0.5
+- di-core >= 1.0.4 && < 1.1
 - generic-override >= 0.0.0.0 && < 0.0.1
 - generic-override-aeson >= 0.0.0.0 && < 0.0.1
 - deepseq >= 1.4.4.0 && < 2
