--- a/calamity.cabal
+++ b/calamity.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.18
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 0772994714492feed4b5b795eb15b0795c3b76609b3e5675079f5b442d29687f
+-- hash: 43387511c78e036e34721f288633d4598a5da6778ed64cb8ef9748d2972b8796
 
 name:           calamity
 version:        0.1.23.1
@@ -158,6 +158,7 @@ library
     , generic-override >=0.0.0.0 && <0.0.1
     , generic-override-aeson >=0.0.0.0 && <0.0.1
     , hashable >=1.2 && <2
+    , http-client >=0.5 && <0.8
     , http-date >=0.0.8 && <0.1
     , http-types >=0.12 && <0.13
     , lens >=4.18 && <5
@@ -168,6 +169,7 @@ library
     , polysemy >=1.3 && <2
     , polysemy-plugin >=0.2 && <0.3
     , reflection >=2.1 && <3
+    , req >=3.1 && <3.9
     , safe-exceptions >=0.1 && <2
     , scientific >=0.3 && <0.4
     , stm >=2.5 && <3
@@ -182,6 +184,5 @@ library
     , unordered-containers >=0.2 && <0.3
     , vector >=0.12 && <0.13
     , websockets >=0.12 && <0.13
-    , wreq >=0.5 && <0.6
     , wuss >=1.1 && <2
   default-language: Haskell2010
