--- a/package.yaml
+++ b/package.yaml
@@ -29,7 +29,8 @@ dependencies:
 - base >= 4.12 && < 5
 - websockets >= 0.12 && < 0.13
 - wuss >= 1.1 && < 2
-- wreq >= 0.5 && < 0.6
+- req >= 3.1 && < 3.9
+- http-client >= 0.5 && < 0.8
 - lens >= 4.18 && < 5
 - stm >= 2.5 && < 3
 - http-types >= 0.12 && < 0.13
