--- a/package.yaml
+++ b/package.yaml
@@ -28,7 +28,8 @@ description:        Please see the README on GitHub at <https://github.com/nitro
 dependencies:
 - base >= 4.12 && < 5
 - websockets >= 0.12 && < 0.13
-- wuss >= 1.1 && < 2
+- connection >= 0.2.6 && < 0.4
+- tls >= 1.4 && < 2
 - req >= 3.1 && < 3.9
 - http-client >= 0.5 && < 0.8
 - lens >= 4.18 && < 5
