--- a/package.yaml
+++ b/package.yaml
@@ -29,6 +29,7 @@ dependencies:
 - base >= 4.12 && < 5
 - websockets >= 0.12 && < 0.13
 - connection >= 0.2.6 && < 0.4
+- x509-system >= 1.6.6 && < 1.7
 - tls >= 1.4 && < 2
 - req >= 3.1 && < 3.9
 - http-client >= 0.5 && < 0.8
