--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:               calamity
-version:            0.1.24.0
+version:            0.1.24.1
 github:             "nitros12/calamity"
 homepage:           https://github.com/nitros12/calamity
 bug-reports:        https://github.com/nitros12/calamity/issues
@@ -28,7 +28,9 @@ description:        Please see the README on GitHub at <https://github.com/nitro
 dependencies:
 - base >= 4.12 && < 5
 - websockets >= 0.12 && < 0.13
-- wuss >= 1.1 && < 2
+- connection >= 0.2.6 && < 0.4
+- x509-system >= 1.6.6 && < 1.7
+- tls >= 1.4 && < 2
 - req >= 3.1 && < 3.9
 - http-client >= 0.5 && < 0.8
 - lens >= 4.18 && < 5
