--- a/calamity/package.yaml
+++ b/calamity/package.yaml
@@ -1,5 +1,5 @@
 name:               calamity
-version:            0.1.25.1
+version:            0.1.26.0
 github:             "simmsb/calamity"
 homepage:           https://github.com/simmsb/calamity
 bug-reports:        https://github.com/simmsb/calamity/issues
@@ -26,7 +26,7 @@ description:        Please see the README on GitHub at <https://github.com/simms
 
 dependencies:
 - base >= 4.12 && < 5
-- calamity-commands >= 0.1 && < 0.2
+# - calamity-commands >= 0.1 && < 0.2
 - websockets >= 0.12 && < 0.13
 - connection >= 0.2.6 && < 0.4
 - x509-system >= 1.6.6 && < 1.7
