--- a/calamity-commands/calamity-commands.cabal
+++ b/calamity-commands/calamity-commands.cabal
@@ -112,7 +112,7 @@ library
     , lens >=4.18 && <6
     , megaparsec >=8 && <10
     , polysemy >=1.5 && <2
-    , polysemy-plugin ==0.3.*
+    , polysemy-plugin >=0.3 && <0.5
     , text >=1.2 && <2
     , text-show >=3.8 && <4
     , unordered-containers ==0.2.*
