--- a/calamity/calamity.cabal
+++ b/calamity/calamity.cabal
@@ -213,7 +213,7 @@ library
     , mime-types ==0.1.*
     , mtl >=2.2 && <3
     , polysemy >=1.5 && <2
-    , polysemy-plugin ==0.3.*
+    , polysemy-plugin >=0.3 && <0.5
     , reflection >=2.1 && <3
     , req >=3.1 && <3.10
     , safe-exceptions >=0.1 && <2
